elementos de password

--- a/src/app/login/login.page.html
+++ b/src/app/login/login.page.html
@@ -23,6 +23,7 @@
         labelPlacement="floating"
         placeholder="Contraseña"
         formControlName="password"
+        type="password"
       ></ion-input>
       <div class="validation-message">
         <ng-container *ngFor="let validation of validation_messages.email">
